mootiro_komoo/apps/main/static/css/styles.css
/* ... */
.icon-resource {
    background-image: url("../img/menu/resource.png");
    background-position: 0 0;
    width: 23px;
    height: 15px;
}
*:hover > .icon-resource, .selected .icon-resource {
    background-image: url("../img/menu/resource-active.png");
}

.icon-investment {
    background-image: url("../img/menu/investment.png");
    background-position: 0 0;
    width: 20px;
    height: 15px;
}
*:hover > .icon-investment, .selected .icon-investment {
    background-image: url("../img/menu/investment-active.png");
}

.map-button {
    cursor: pointer;
    float: left;
    padding: 5px;
    margin: 10px 5px;
}
.map-panel .content .map-button,
.map-button:hover, .map-button.selected {
    border: 1px solid #4092a9 !important;
}

/* Map panels */
#collapse-panel {
    background: url("../img/collapse-horizontal.png") no-repeat center center;
    width: 20px;
    height: 20px;
    position: absolute;
    right: 5px;
    top: 15px;
    cursor: pointer;
    z-index: 1000;
}
#collapse-panel:hover {
    background-image: url("../img/collapse-horizontal-hover.png");
}
.collapsed #collapse-panel {
    background-image: url("../img/expand-horizontal.png");
}
.collapsed #collapse-panel:hover {
    background-image: url("../img/expand-horizontal-hover.png");
}
#map-panel {
    transition: left 1s;
    -moz-transition: left 1s; /* Firefox 4 */
    -webkit-transition: left 1s; /* Safari and Chrome */
    -o-transition: left 1s; /* Opera */
    background: #fafafa;
    padding: 0 30px 0 0;
    position: relative;
    left: 0px;
}
.collapsed #map-panel {
    left: -300px !important;
}
.collapsed #map-panel-content {
    transition: opacity 1s;
    -moz-transition: opacity 1s; /* Firefox 4 */
    -webkit-transition: opacity 1s; /* Safari and Chrome */
    -o-transition: opacity 1s; /* Opera */
    opacity: 0;
}
#map-canvas-main {
    transition: margin-left 1s;
    -moz-transition: margin-left 1s; /* Firefox 4 */
    -webkit-transition: margin-left 1s; /* Safari and Chrome */
    -o-transition: margin-left 1s; /* Opera */
    margin-left: 330px !important;
}
.collapsed #map-canvas-main {
    margin-left: 30px !important;
    width: auto !important;
}
#map-panel-content {
    margin-right: -30px;
}
#map-panel div.img-holder {
    width: 35px;
    text-align: center;
    display: inline-block;
    vertical-align: middle;
}
#map-panel #filter-cirle,
#map-panel ul.geo-objects-listing li {
    border-bottom: 1px solid #e9e9e9;
}
#map-panel ul.geo-objects-listing .sublist li:hover,
#map-panel ul.geo-objects-listing li .item:hover { background: #dceff4 }
#map-panel ul.geo-objects-listing li.sublist { padding: 0 }
#filter-form ul.geo-objects-listing li.sublist { display: none }
#map-panel ul.geo-objects-listing li.sublist:hover { background: transparent }
#map-panel ul.geo-objects-listing li.sublist ul li:last-child { border-bottom: none }
#map-panel .panel { margin-top: 10px }
#filter-submit {
    padding-left: 2em;
    padding-right: 2em;
}
#filter-circle { padding: 8px; }
#filter-circle .button { margin-left: 0em }
#filter-circle .button .icon-plus { vertical-align: middle }
#filter-circle span { margin-left: 2em }
#filter-circle input {
    width: 3em;
    vertical-align: baseline;
    box-shadow: 1px 1px 1px #999999 inset;
}
#filter-circle .floating {
    display: none;
    padding: 15px;
    background: #ffc1ae;
    border-radius        : 7px;
    -moz-border-radius   : 7px;
    -webkit-border-radius: 7px;
}
#filter-circle .ui-slider {
    width: 130px;
    height: 10px;
    border-radius        : 7px;
    -moz-border-radius   : 7px;
    -webkit-border-radius: 7px;
}
#filter-circle .ui-slider-handle {
    width: 6px;
    height: 14px;
    top: -3px;
    margin-left: -3px;
}
#filter-slider { float: left }
#filter-slider-container .icon-ok {
    float: right;
    margin-left: 0.4em;
}
#filter-slider-container {
    position: absolute;
    right: 5px;
    z-index: 1;
}
#filter-helper {
    position: fixed;
    left: 220px;
    top: 250px;
    z-index: 10;
}
#filter-results-container { display: none }
#filter-results { background: #f2f2f2 }

.categories-icons img {
    margin: 10px 2px 0;
}
.map-tabs { padding: 10px; }
.map-tab {
    cursor: pointer;
    text-align: center;
    float: left;
}
.map-tab a {
    color: black;
    display: block;
    padding: 5px 0px;
}
.map-tab a:hover,
.map-tab.selected a {
    color: white;
}
.map-tab-container {
    clear: both;
    background: #dceff4;
}
.map-infowindow-content {
    -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
    -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}
.map-panel, .map-button, .map-infowindow-content {
    border-radius        : 6px;
    -moz-border-radius   : 6px;
    -webkit-border-radius: 6px;
}
.map-panel {
    background: #dceff4;
}
body.community .map-panel {
    margin-top: 35px !important;
}
body.community #map-panel-tabs {
    padding-top: 35px !important;
}
#main-content {
    margin: 20px 0 0;
}
body.community #main-content {
    margin: 40px 0 0;
}
.map-panel .map-panel-buttons,
.map-panel .content {
    margin: 0 5px;
}
.map-panel .content .map-button {
    margin: 0 0px;
}
.map-panel .map-panel-title {
    margin: 10px;
}
.map-panel .content .map-button.active {
    background: #2E6167 !important;
}
.map-menuitem,
.map-menuitem.frozen:hover {
    cursor: pointer;
    direction: ltr;
    position: relative;
    padding: 0;
    color: #000;
    white-space: nowrap;
    border-bottom: 1px solid #e9e9e9;
    background: #fafafa;
    clear: both;
}
.map-menuitem .item-title,
.map-submenu .map-menuitem {
    padding: 12px;
}
.map-menuitem img {
    padding: 10px 10px 0 15px;
}
.map-submenu .map-menuitem {
    border-top: 1px solid #e9e9e9;
    border-bottom: none;
    padding-left: 30px;
}
.map-menuitem:hover {
    background: #dceff4
}
.map-menuitem.disabled, .map-menuitem.disabled:hover {
    color: #aaa;
}
#top #menu, #top #search { margin-left: 40px; }
/* ... */

